[package]
name = "reactance"
version = "0.1.0-canary"
edition = "2018"
publish = false

[dependencies]
cortex-m-rtic = "0.5.5"
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
rtt-target = { version = "0.3.0", features = ["cortex-m"] }
stm32g4 = { version = "0.13.0", features = ["stm32g474"] }

[profile.dev.package."*"]
opt-level = "z"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "z"

[profile.release.build-override]
codegen-units = 16
debug = false
opt-level = 0

[[bin]]
bench = false
name = "reactance"
test = false
