[package]
name = "reactance"
version = "0.1.0-canary"
edition = "2018"
publish = false

[dependencies]
cortex-m-rtic = "0.5.6"
defmt = "0.2.1"
defmt-rtt = "0.2.0"
panic-probe = { version = "0.2.0", features = ["print-defmt"] }
stm32g4 = { version = "0.13.0", features = ["stm32g474"] }
uom = { version = "0.31.1" }

[features]
default = [
  "defmt-default",
]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[profile.dev.package."*"]
opt-level = "z"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "z"

[profile.release.build-override]
codegen-units = 16
debug = false
opt-level = 0
