cargo-features = ["edition2021", "strip"]

[package]
name = "reactance"
version = "0.1.0-canary"
edition = "2018"
publish = false

[dependencies]
cortex-m-rtic = "0.5.6"
defmt = "0.2.3"
defmt-rtt = "0.2.0"
dsp = { path = "./dsp/" }
panic-probe = { version = "0.2.0", features = ["print-defmt"] }
stm32g4 = { version = "0.13.0", features = ["stm32g474"] }
uom = { version = "0.32.0", default-features = false, features = ["autoconvert", "f32", "si", "use_serde"] }

[features]
default = [
  "defmt-default",
]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[profile.dev.package."*"]
opt-level = "z"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "z"
strip = true

[profile.release.build-override]
codegen-units = 16
debug = false
opt-level = 0

[workspace]
members = ["./dsp/"]
